--- a/SharpForum.HtmlTemplates/categories.html
+++ b/SharpForum.HtmlTemplates/categories.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="list-group">
-        <a href="#" class="list-group-item active"><strong>Category Name</strong></a>
+        <li class="list-group-item list-group-item-info"><strong>Super Category Name</strong></li>
         <a href="#" class="list-group-item">
             <div class="row">
                 <div class="col-sm-6">
-                    <strong>Subcategory Name 1</strong>
+                    <strong>Category Name 1</strong>
                     <br>
                     <small>Info about this subcategory. Details too.</small>
                 </div>
@@ -18,7 +18,7 @@
         <a href="#" class="list-group-item">
             <div class="row">
                 <div class="col-sm-6">
-                    <strong>Subcategory Name 2</strong>
+                    <strong>Category Name 2</strong>
                     <br>
                     <small>Info about this subcategory. Details too.</small>
                 </div>
@@ -29,13 +29,11 @@
                 </div>
             </div>
         </a>
-    </div>
-    <div class="list-group">
-        <a href="#" class="list-group-item active"><strong>Category Name</strong></a>
+        <li class="list-group-item list-group-item-info"><strong>Super Category Name 2</strong></li>
         <a href="#" class="list-group-item">
             <div class="row">
                 <div class="col-sm-6">
-                    <strong>Subcategory Name 3</strong>
+                    <strong>Category Name 3</strong>
                     <br>
                     <small>Info about this subcategory. Details too.</small>
                 </div>
@@ -49,7 +47,7 @@
         <a href="#" class="list-group-item">
             <div class="row">
                 <div class="col-sm-6">
-                    <strong>Subcategory Name 4</strong>
+                    <strong>Category Name 4</strong>
                     <br>
                     <small>Info about this subcategory. Details too.</small>
                 </div>
