--- a/SharpForum.HtmlTemplates/register.html
+++ b/SharpForum.HtmlTemplates/register.html
@@ -6,7 +6,8 @@
     <!-- User Profile -->
     <div class="list-group-item">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2" <form class="form-horizontal" role="form"
+            <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+                <form class="form-horizontal" role="form"
                 action="post">
                 <div class="form-group">
                     <label for="username" class="col-sm-3 control-label">Username</label>
